--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@features/*": [
+        "./features/*"
       ]
     }
   },
@@ -13,6 +16,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
-, "tailwind.config.js"  ]
+    "nativewind-env.d.ts",
+    "tailwind.config.js"
+  ]
 }
