--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "বাজার তালিকা - Shopping List",
     "slug": "bajar-talika",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo/logo.png",
     "scheme": "bajar-talika",
@@ -16,7 +16,12 @@
         "foregroundImage": "./assets/images/logo/logo.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ],
+      "package": "com.ahmod_hasan.bajartalika"
     },
     "web": {
       "bundler": "metro",
@@ -39,6 +44,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c35f2ad0-7045-4d45-8ccb-7abe6b86e953"
+      }
+    },
+    "owner": "ahmod_hasan"
   }
 }
